<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EarlyBird</string>
    <string name="item_add_alarm">Add</string>
    <string name="item_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="pref_header_questions">Questions</string>
    <string name="checkbox_snooze">Snooze</string>
    <string name="day_monday">M</string>
    <string name="day_tuesday">T</string>
    <string name="day_wednesday">W</string>
    <string name="day_thursday">Th</string>
    <string name="day_friday">F</string>
    <string name="day_saturday">S</string>
    <string name="day_sunday">Su</string>
    <string name="utc_plus">UTC+</string>
    <string name="utc_minus">UTC-</string>
    <string name="hint_question">Question</string>
    <string name="hint_anwser">Anwser</string>
    <string name="author">Barnabás Czémán</string>
    <string name="pref_header_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="when">2015</string>
    <string name="pref_title_questions">Enable Questions</string>
    <string name="pref_title_snooze">Snooze Interval</string>
    <string name="pref_header_alarm">Alarm Preferences</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_snooze">Snooze</string>
</resources>