<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">





        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_snooze"
            android:id="@+id/checkbox_snooze"
            android:checked="false"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="7">
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/day_monday"
                android:textOn="@string/day_monday"
                android:id="@+id/day_monday"/>
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/day_tuesday"
                android:textOn="@string/day_tuesday"
                android:id="@+id/day_tuesday"/>
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/day_wednesday"
                android:textOn="@string/day_wednesday"
                android:id="@+id/day_wednesday"/>
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/day_thursday"
                android:textOff="@string/day_thursday"
                android:id="@+id/day_thursday"/>
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/day_friday"
                android:textOn="@string/day_friday"
                android:id="@+id/day_friday"/>
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/day_saturday"
                android:textOn="@string/day_saturday"
                android:id="@+id/day_saturday"/>
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/day_sunday"
                android:textOn="@string/day_sunday"
                android:id="@+id/day_sunday"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="5">
            <Button
                android:id="@+id/button_utc_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/utc_minus"/>
            <TextView
                android:id="@+id/text_utc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center" />
            <Button
                android:id="@+id/button_utc_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/utc_plus"/>
        </LinearLayout>
    </TableLayout>
</ScrollView>