<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="m.earlybird.fragment.AboutFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal|top"
        android:textSize="@dimen/abc_text_size_display_2_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:layout_gravity="center"
        android:textSize="@dimen/abc_text_size_display_2_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when"
        android:layout_gravity="bottom|center"
        android:textSize="@dimen/abc_text_size_display_2_material" />



</FrameLayout>
